<resources>
    <string name="appName">Mido</string>
    <string name="backEndUrl">https://1e3797a9.ngrok.io</string>
    <string name="employeeSearchButton">Employee Search</string>
    <string name="facebookAppId">197603340658783</string>
    <string name="facebookButton">Facebook</string>
    <string name="facebookLoginUrl">/fb/login</string>
    <string name="facebookPageCreatePostButton">Create Post</string>
    <string name="facebookPageCreatePostUrl">/fb/{userId}/page/{pageId}/post</string>
    <string name="facebookPagePostHint">Message</string>
    <string name="facebookPagesUrl">/fb/{userId}/page/get</string>
    <string name="facebookPostsUrl">/fb/{userId}/page/{pageId}</string>
    <string name="newsUrl">/news/get</string>
    <string name="tokopediaGetInsightUrl">/tokped/getPageInfo</string>
    <string name="bukalapakGetInsightUrl">/bl/getPageInfo</string>
    <string name="instagramButton">Instagram</string>
    <string name="lineButton">Line</string>
    <string name="marketInsightButton">Market Insight</string>
    <string name="newsButton">News</string>
    <string name="packageName">com.cia.mido</string>
    <string name="postButton">Post</string>
    <string name="socialManagerButton">Social Manager</string>
    <string name="searchButton">Cari</string>
    <string name="lihatButton">Lihat</string>
    <string name="searchEmployeeUrl">/sl/get</string>
    <string name="hasilSearchEmployee"></string>
    <string name="bidangKerja"></string>
</resources>