<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cia.mido.FacebookPostsActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/socialManagerButton"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="chooseSocialManager"
            android:text="@string/socialManagerButton"
            android:textAlignment="center" />

        <Button
            android:id="@+id/newsButton"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="chooseNews"
            android:text="@string/newsButton"
            android:textAlignment="center" />

        <Button
            android:id="@+id/marketInsightButton"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="chooseMarketInsight"
            android:text="@string/marketInsightButton"
            android:textAlignment="center" />

        <Button
            android:id="@+id/employeeSearchButton"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:onClick="chooseEmployeeSearch"
            android:text="@string/employeeSearchButton"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="showFacebookPagePostForm"
        android:text="@string/facebookPageCreatePostButton" />

    <ListView
        android:id="@+id/facebookPostList"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>
