<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cia.mido.NewsActivity">

<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/socialManagerButton"
        android:src="@mipmap/social_manager"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:onClick="chooseSocialManager"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/newsButton"
        android:src="@mipmap/news"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:onClick="chooseNews"
        android:text="@string/newsButton"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/marketInsightButton"
        android:src="@mipmap/market_insight"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:onClick="chooseMarketInsight"
        android:text="@string/marketInsightButton"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/employeeSearchButton"
        android:src="@mipmap/employee_search"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:onClick="chooseEmployeeSearch"
        android:text="@string/employeeSearchButton"
        android:textAlignment="center" />

</LinearLayout>

<it.gmariotti.cardslib.library.view.CardListView
    android:id="@+id/carddemo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"/>

</LinearLayout>
